<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Amber50"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ca.javateacheer.multquiz2.MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/message"
        style="@style/message"
        android:text="@string/enter_answer"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="32dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/problem"
            style="@style/problem"
            android:labelFor="@+id/answer"
            android:text="@string/sample_problem"
            tools:layout_editor_absoluteX="103dp"
            tools:layout_editor_absoluteY="94dp" />

        <EditText
            android:id="@id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minEms="2"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            tools:ignore="UnusedAttribute"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="84dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/check_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="check"
            android:text="@string/check_answer"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="163dp" />

        <Button
            android:id="@+id/next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:text="@string/next_problem"
            tools:layout_editor_absoluteX="253dp"
            tools:layout_editor_absoluteY="163dp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/sheridan"
        style="@style/sheridan_label"
        android:text="@string/sheridan" />

</LinearLayout>
